--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "dotenv": "^16.4.7",
+    "mysql2": "^3.14.0",
     "nodemon": "^3.1.9",
     "telegraf": "^4.16.3"
   }
