--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.9.0",
     "dotenv": "^16.4.7",
-    "mysql2": "^3.14.0",
+    "express": "^5.1.0",
+    "node-telegram-bot-api": "^0.66.0",
     "nodemon": "^3.1.9",
-    "telegraf": "^4.16.3"
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7"
   }
 }
